8241018: 32-bit integer log2 functions return the wrong value for negative arguments on 64-bit machines

Reviewed-by: kvn